add: edit metadata
